--- a/po/hu.po
+++ b/po/hu.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # Gábor Szentiványi <szenti@ulx.hu>, 20, 2009
 # Language-Team hu <en@li.org>, 2009
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-02 09:45-0400\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 "PO-Revision-Date: 2015-05-10 06:54-0400\n"
 "Last-Translator: Zoltan Riba <riba.zoltan@gmail.com>\n"
 "Language-Team: Hungarian (http://www.transifex.com/projects/p/virt-manager/"
 "language/hu/)\n"
 "Language: hu\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Zanata 3.7.1\n"
 
@@ -108,11 +108,9 @@ msgid "--disk storage must be specified (override with --disk none)"
 msgstr ""
 
 #: ../virt-install:439
-msgid ""
-"An install method must be specified\n"
+msgid "An install method must be specified\n"
 "(%(methods)s)"
-msgstr ""
-"Meg kell adnia legalább egy telepítési eljárást\n"
+msgstr "Meg kell adnia legalább egy telepítési eljárást\n"
 "(%(methods))"
 
 #: ../virt-install:446
@@ -192,8 +190,8 @@ msgstr "A vendég hálózati konfigurációja nem támogatja a PXE-t"
 
 #: ../virt-install:553
 msgid ""
-"No operating system detected, VM performance may suffer. Specify an OS with "
-"--os-variant for optimal results."
+"No operating system detected, VM performance may suffer. Specify an OS with -"
+"-os-variant for optimal results."
 msgstr ""
 
 #: ../virt-install:573
@@ -205,11 +203,9 @@ msgid "No console to launch for the guest, defaulting to --wait -1"
 msgstr ""
 
 #: ../virt-install:749
-msgid ""
-"\n"
+msgid "\n"
 "Starting install..."
-msgstr ""
-"\n"
+msgstr "\n"
 "Telepítés indul..."
 
 #: ../virt-install:766
@@ -218,8 +214,7 @@ msgstr "Tartomány létrehozása befejeződött."
 
 #: ../virt-install:770
 #, c-format
-msgid ""
-"You can restart your domain by running:\n"
+msgid "You can restart your domain by running:\n"
 "  %s"
 msgstr ""
 
@@ -265,7 +260,8 @@ msgstr "A tartomány nem található a telepítés után: %s"
 
 #: ../virt-install:866
 msgid "Installation has exceeded specified time limit. Exiting application."
-msgstr "A telepítés túllépte a megadott időkorlátot. Kilépés az alkalmazásból."
+msgstr ""
+"A telepítés túllépte a megadott időkorlátot. Kilépés az alkalmazásból."
 
 #: ../virt-install:891
 msgid "Dry run completed successfully"
@@ -449,8 +445,8 @@ msgstr "Az új állomány, amelyet a virtuális gép lemezképként használ"
 
 #: ../virt-clone:129
 msgid ""
-"Force to copy devices (eg, if 'hdc' is a readonly cdrom device, --force-"
-"copy=hdc)"
+"Force to copy devices (eg, if 'hdc' is a readonly cdrom device, --force-copy="
+"hdc)"
 msgstr ""
 
 #: ../virt-clone:133
@@ -636,8 +632,7 @@ msgid ""
 msgstr ""
 
 #: ../virt-xml:353
-msgid ""
-"Add specified device. Example:\n"
+msgid "Add specified device. Example:\n"
 "--add-device --disk ..."
 msgstr ""
 
@@ -1114,8 +1109,7 @@ msgid "Cannot clone unmanaged remote storage."
 msgstr "Nem lehetséges a nem menedzselt távoli meghajtó klónozása."
 
 #: ../virtManager/clone.py:84
-msgid ""
-"Block devices to clone must be libvirt\n"
+msgid "Block devices to clone must be libvirt\n"
 "managed storage volumes."
 msgstr ""
 "Blokkeszközök klónozásához muszáj libvirt\n"
@@ -1407,8 +1401,7 @@ msgstr "Nincs aktív kapcsolat a telepítéshez."
 
 #: ../virtManager/create.py:424
 #, python-format
-msgid ""
-"Failed to setup UEFI for AArch64: %s\n"
+msgid "Failed to setup UEFI for AArch64: %s\n"
 "Install options are limited."
 msgstr ""
 
@@ -1961,8 +1954,7 @@ msgstr "Biztosan törölni szeretné a tárolót?"
 
 #: ../virtManager/delete.py:143
 #, python-format
-msgid ""
-"The following paths will be deleted:\n"
+msgid "The following paths will be deleted:\n"
 "\n"
 "%s"
 msgstr ""
@@ -2024,11 +2016,9 @@ msgstr "A tároló megoszthatóként jelölt."
 
 #: ../virtManager/delete.py:400
 #, python-format
-msgid ""
-"Storage is in use by the following virtual machines:\n"
+msgid "Storage is in use by the following virtual machines:\n"
 "- %s "
-msgstr ""
-"A tárolót a következő virtuális gépek használják:\n"
+msgstr "A tárolót a következő virtuális gépek használják:\n"
 "- %s"
 
 #: ../virtManager/details.py:163
@@ -2088,8 +2078,7 @@ msgstr "Figyelő"
 #: ../virtManager/details.py:622
 #, fuzzy
 msgid "This will abort the installation. Are you sure?"
-msgstr ""
-"El fogja távolítani a kapcsolatot:\n"
+msgstr "El fogja távolítani a kapcsolatot:\n"
 "\n"
 "%s\n"
 "\n"
@@ -2214,7 +2203,8 @@ msgstr "Hiba az automatikus indítás cseréjekor: %s"
 #: ../virtManager/details.py:2115
 msgid "Cannot set initrd without specifying a kernel path"
 msgstr ""
-"Nem lehet beállítani az initrd-t a kernel elérési útvonalának megadása nélkül"
+"Nem lehet beállítani az initrd-t a kernel elérési útvonalának megadása "
+"nélkül"
 
 #: ../virtManager/details.py:2118
 msgid "Cannot set kernel arguments without specifying a kernel path"
@@ -2524,11 +2514,9 @@ msgstr ""
 "az openssh-askpass vagy hasonló programot."
 
 #: ../virtManager/engine.py:618
-msgid ""
-"Verify that the 'libvirtd' daemon is running\n"
+msgid "Verify that the 'libvirtd' daemon is running\n"
 "on the remote host."
-msgstr ""
-"Ellenőrizze, hogy a 'libvirtd' szolgáltatás\n"
+msgstr "Ellenőrizze, hogy a 'libvirtd' szolgáltatás\n"
 "fut-e a távoli gépen."
 
 #: ../virtManager/engine.py:622
@@ -2536,8 +2524,7 @@ msgid ""
 "Verify that:\n"
 " - A Xen host kernel was booted\n"
 " - The Xen service has been started"
-msgstr ""
-"Ellenőrizze:\n"
+msgstr "Ellenőrizze:\n"
 "- A Xen kernel indult el\n"
 "- A Xen szolgáltatás fut"
 
@@ -2961,14 +2948,12 @@ msgstr "Hálózat I/O"
 
 #: ../virtManager/manager.py:511
 #, python-format
-msgid ""
-"This will remove the connection:\n"
+msgid "This will remove the connection:\n"
 "\n"
 "%s\n"
 "\n"
 "Are you sure?"
-msgstr ""
-"El fogja távolítani a kapcsolatot:\n"
+msgstr "El fogja távolítani a kapcsolatot:\n"
 "\n"
 "%s\n"
 "\n"
@@ -3031,9 +3016,9 @@ msgstr ""
 
 #: ../virtManager/migrate.py:228
 msgid ""
-"The destination's hostname is 'localhost', which will be rejected by "
-"libvirt. You must configure the destination to have a valid publicly "
-"accessible hostname."
+"The destination's hostname is 'localhost', which will be rejected by libvirt."
+" You must configure the destination to have a valid publicly accessible "
+"hostname."
 msgstr ""
 
 #: ../virtManager/migrate.py:295
@@ -3528,11 +3513,9 @@ msgstr ""
 
 #: ../virtconv/vmx.py:87
 #, python-format
-msgid ""
-"Syntax error at line %d: %s\n"
+msgid "Syntax error at line %d: %s\n"
 "%s"
-msgstr ""
-"Szintatktikai hiba  %d: %s\n"
+msgstr "Szintatktikai hiba  %d: %s\n"
 "%s"
 
 #: ../virtconv/vmx.py:125
@@ -3694,11 +3677,9 @@ msgid ""
 msgstr ""
 
 #: ../virtinst/cli.py:585
-msgid ""
-"CPU model and features. Ex:\n"
+msgid "CPU model and features. Ex:\n"
 "--cpu coreduo,+x2apic\n"
-msgstr ""
-"CPU model és jellemzők. Pl:\n"
+msgstr "CPU model és jellemzők. Pl:\n"
 "--cpu coreduo,+x2apic\n"
 
 #: ../virtinst/cli.py:596
@@ -3759,7 +3740,8 @@ msgstr ""
 "beállítása"
 
 #: ../virtinst/cli.py:631
-msgid "Configure physical USB/PCI/etc host devices to be shared with the guest"
+msgid ""
+"Configure physical USB/PCI/etc host devices to be shared with the guest"
 msgstr ""
 
 #: ../virtinst/cli.py:634
@@ -3782,8 +3764,7 @@ msgid "Configure guest video hardware."
 msgstr "Vendég rendszer video hardverének beállítása."
 
 #: ../virtinst/cli.py:659
-msgid ""
-"Configure a guest smartcard device. Ex:\n"
+msgid "Configure a guest smartcard device. Ex:\n"
 "--smartcard mode=passthrough"
 msgstr ""
 
@@ -3794,26 +3775,22 @@ msgid ""
 msgstr ""
 
 #: ../virtinst/cli.py:665
-msgid ""
-"Configure a guest memballoon device. Ex:\n"
+msgid "Configure a guest memballoon device. Ex:\n"
 "--memballoon model=virtio"
 msgstr ""
 
 #: ../virtinst/cli.py:668
-msgid ""
-"Configure a guest TPM device. Ex:\n"
+msgid "Configure a guest TPM device. Ex:\n"
 "--tpm /dev/tpm"
 msgstr ""
 
 #: ../virtinst/cli.py:671
-msgid ""
-"Configure a guest RNG device. Ex:\n"
+msgid "Configure a guest RNG device. Ex:\n"
 "--rng /dev/random"
 msgstr ""
 
 #: ../virtinst/cli.py:674
-msgid ""
-"Configure a guest panic device. Ex:\n"
+msgid "Configure a guest panic device. Ex:\n"
 "--panic default"
 msgstr ""
 
@@ -5314,8 +5291,7 @@ msgid "Architecture options"
 msgstr "Architektúra tulajdonságok"
 
 #: ../ui/create.ui.h:16
-msgid ""
-"Error message\n"
+msgid "Error message\n"
 "bar"
 msgstr ""
 
@@ -7096,8 +7072,7 @@ msgid "CPU _default:"
 msgstr ""
 
 #: ../ui/preferences.ui.h:21
-msgid ""
-"Add Spice _USB\n"
+msgid "Add Spice _USB\n"
 "Redirection:"
 msgstr ""
 
