--- a/po/sk.po
+++ b/po/sk.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # helix84 <helix84@centrum.sk>, 2015
 # Michal Hriň <michal.hrin@yahoo.com>, 2013
@@ -13,14 +13,14 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-02 09:45-0400\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 "PO-Revision-Date: 2015-05-18 04:58-0400\n"
 "Last-Translator: helix84 <helix84@centrum.sk>\n"
 "Language-Team: Slovak (http://www.transifex.com/projects/p/virt-manager/"
 "language/sk/)\n"
 "Language: sk\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 "X-Generator: Zanata 3.7.1\n"
 
@@ -97,8 +97,7 @@ msgid "--disk storage must be specified (override with --disk none)"
 msgstr ""
 
 #: ../virt-install:439
-msgid ""
-"An install method must be specified\n"
+msgid "An install method must be specified\n"
 "(%(methods)s)"
 msgstr ""
 
@@ -179,8 +178,8 @@ msgstr ""
 
 #: ../virt-install:553
 msgid ""
-"No operating system detected, VM performance may suffer. Specify an OS with "
-"--os-variant for optimal results."
+"No operating system detected, VM performance may suffer. Specify an OS with -"
+"-os-variant for optimal results."
 msgstr ""
 
 #: ../virt-install:573
@@ -192,8 +191,7 @@ msgid "No console to launch for the guest, defaulting to --wait -1"
 msgstr ""
 
 #: ../virt-install:749
-msgid ""
-"\n"
+msgid "\n"
 "Starting install..."
 msgstr ""
 
@@ -203,8 +201,7 @@ msgstr ""
 
 #: ../virt-install:770
 #, c-format
-msgid ""
-"You can restart your domain by running:\n"
+msgid "You can restart your domain by running:\n"
 "  %s"
 msgstr ""
 
@@ -426,8 +423,8 @@ msgstr ""
 
 #: ../virt-clone:129
 msgid ""
-"Force to copy devices (eg, if 'hdc' is a readonly cdrom device, --force-"
-"copy=hdc)"
+"Force to copy devices (eg, if 'hdc' is a readonly cdrom device, --force-copy="
+"hdc)"
 msgstr ""
 
 #: ../virt-clone:133
@@ -613,8 +610,7 @@ msgid ""
 msgstr ""
 
 #: ../virt-xml:353
-msgid ""
-"Add specified device. Example:\n"
+msgid "Add specified device. Example:\n"
 "--add-device --disk ..."
 msgstr ""
 
@@ -1003,7 +999,8 @@ msgstr "Viac sa to pri týchto priečinkoch nepýtať."
 #: ../virtManager/addstorage.py:163
 msgid ""
 "Errors were encountered changing permissions for the following directories:"
-msgstr "Nastali chyby pri zmene nastavení oprávnení pre nasledujúce priečinky:"
+msgstr ""
+"Nastali chyby pri zmene nastavení oprávnení pre nasledujúce priečinky:"
 
 #: ../virtManager/addstorage.py:194 ../virtManager/create.py:391
 #, python-format
@@ -1078,8 +1075,7 @@ msgid "Cannot clone unmanaged remote storage."
 msgstr "Nedá sa naklonovať nespravované vzdialené úložisko."
 
 #: ../virtManager/clone.py:84
-msgid ""
-"Block devices to clone must be libvirt\n"
+msgid "Block devices to clone must be libvirt\n"
 "managed storage volumes."
 msgstr ""
 
@@ -1365,8 +1361,7 @@ msgstr "Nie je aktívne spojenie, kde by sa dalo inštalovať."
 
 #: ../virtManager/create.py:424
 #, python-format
-msgid ""
-"Failed to setup UEFI for AArch64: %s\n"
+msgid "Failed to setup UEFI for AArch64: %s\n"
 "Install options are limited."
 msgstr ""
 
@@ -1377,7 +1372,8 @@ msgstr ""
 #: ../virtManager/create.py:457
 #, python-format
 msgid "%s installs not available for paravirt guests."
-msgstr "Inštalácia %s nie je možná pre hosťov používajúcich paravirtualizáciu."
+msgstr ""
+"Inštalácia %s nie je možná pre hosťov používajúcich paravirtualizáciu."
 
 #: ../virtManager/create.py:462
 #, python-format
@@ -1886,8 +1882,8 @@ msgid ""
 "Building a pool of this type will format the source device. Are you sure you "
 "want to 'build' this pool?"
 msgstr ""
-"Pri zostavovaní zoskupenia tohto typu sa bude formátovať zdrojové "
-"zariadenie. Naozaj chcete „zostaviť“ toto zoskupenie?"
+"Pri zostavovaní zoskupenia tohto typu sa bude formátovať zdrojové zariadenie."
+" Naozaj chcete „zostaviť“ toto zoskupenie?"
 
 #: ../virtManager/createvol.py:281
 #, python-format
@@ -1916,8 +1912,7 @@ msgstr ""
 
 #: ../virtManager/delete.py:143
 #, python-format
-msgid ""
-"The following paths will be deleted:\n"
+msgid "The following paths will be deleted:\n"
 "\n"
 "%s"
 msgstr ""
@@ -1980,11 +1975,9 @@ msgstr "Úložisko je označené ako zdielateľné."
 
 #: ../virtManager/delete.py:400
 #, python-format
-msgid ""
-"Storage is in use by the following virtual machines:\n"
+msgid "Storage is in use by the following virtual machines:\n"
 "- %s "
-msgstr ""
-"Úložisko používajú nasledujúce virtuálne počítače:\n"
+msgstr "Úložisko používajú nasledujúce virtuálne počítače:\n"
 "- %s "
 
 #: ../virtManager/details.py:163
@@ -2044,8 +2037,7 @@ msgstr "Ochranný časovač"
 #: ../virtManager/details.py:622
 #, fuzzy
 msgid "This will abort the installation. Are you sure?"
-msgstr ""
-"Týmto odstránite pripojenie:\n"
+msgstr "Týmto odstránite pripojenie:\n"
 "\n"
 "%s\n"
 "\n"
@@ -2470,8 +2462,7 @@ msgid ""
 msgstr ""
 
 #: ../virtManager/engine.py:618
-msgid ""
-"Verify that the 'libvirtd' daemon is running\n"
+msgid "Verify that the 'libvirtd' daemon is running\n"
 "on the remote host."
 msgstr ""
 
@@ -2901,14 +2892,12 @@ msgstr "Aktivita siete"
 
 #: ../virtManager/manager.py:511
 #, python-format
-msgid ""
-"This will remove the connection:\n"
+msgid "This will remove the connection:\n"
 "\n"
 "%s\n"
 "\n"
 "Are you sure?"
-msgstr ""
-"Týmto odstránite pripojenie:\n"
+msgstr "Týmto odstránite pripojenie:\n"
 "\n"
 "%s\n"
 "\n"
@@ -2971,9 +2960,9 @@ msgstr ""
 
 #: ../virtManager/migrate.py:228
 msgid ""
-"The destination's hostname is 'localhost', which will be rejected by "
-"libvirt. You must configure the destination to have a valid publicly "
-"accessible hostname."
+"The destination's hostname is 'localhost', which will be rejected by libvirt."
+" You must configure the destination to have a valid publicly accessible "
+"hostname."
 msgstr ""
 
 #: ../virtManager/migrate.py:295
@@ -3474,8 +3463,7 @@ msgstr ""
 
 #: ../virtconv/vmx.py:87
 #, python-format
-msgid ""
-"Syntax error at line %d: %s\n"
+msgid "Syntax error at line %d: %s\n"
 "%s"
 msgstr ""
 
@@ -3634,11 +3622,9 @@ msgid ""
 msgstr ""
 
 #: ../virtinst/cli.py:585
-msgid ""
-"CPU model and features. Ex:\n"
+msgid "CPU model and features. Ex:\n"
 "--cpu coreduo,+x2apic\n"
-msgstr ""
-"Model a vlastnosti procesora. Napr.:\n"
+msgstr "Model a vlastnosti procesora. Napr.:\n"
 "--cpu coreduo,+x2apic\n"
 
 #: ../virtinst/cli.py:596
@@ -3690,7 +3676,8 @@ msgid "Configure a text console connection between the guest and host"
 msgstr ""
 
 #: ../virtinst/cli.py:631
-msgid "Configure physical USB/PCI/etc host devices to be shared with the guest"
+msgid ""
+"Configure physical USB/PCI/etc host devices to be shared with the guest"
 msgstr ""
 
 #: ../virtinst/cli.py:634
@@ -3713,8 +3700,7 @@ msgid "Configure guest video hardware."
 msgstr ""
 
 #: ../virtinst/cli.py:659
-msgid ""
-"Configure a guest smartcard device. Ex:\n"
+msgid "Configure a guest smartcard device. Ex:\n"
 "--smartcard mode=passthrough"
 msgstr ""
 
@@ -3727,26 +3713,22 @@ msgstr ""
 "--redirdev usb,type=tcp,server=192.168.1.1:4000"
 
 #: ../virtinst/cli.py:665
-msgid ""
-"Configure a guest memballoon device. Ex:\n"
+msgid "Configure a guest memballoon device. Ex:\n"
 "--memballoon model=virtio"
 msgstr ""
 
 #: ../virtinst/cli.py:668
-msgid ""
-"Configure a guest TPM device. Ex:\n"
+msgid "Configure a guest TPM device. Ex:\n"
 "--tpm /dev/tpm"
 msgstr ""
 
 #: ../virtinst/cli.py:671
-msgid ""
-"Configure a guest RNG device. Ex:\n"
+msgid "Configure a guest RNG device. Ex:\n"
 "--rng /dev/random"
 msgstr ""
 
 #: ../virtinst/cli.py:674
-msgid ""
-"Configure a guest panic device. Ex:\n"
+msgid "Configure a guest panic device. Ex:\n"
 "--panic default"
 msgstr ""
 
@@ -5252,8 +5234,7 @@ msgid "Architecture options"
 msgstr "Možnosti architektúry"
 
 #: ../ui/create.ui.h:16
-msgid ""
-"Error message\n"
+msgid "Error message\n"
 "bar"
 msgstr ""
 
@@ -5528,7 +5509,8 @@ msgstr "Nastaviť sieťové rozhranie"
 
 #: ../ui/createinterface.ui.h:20
 msgid "<span size='large' color='white'>Configure network interface</span>"
-msgstr "<span size='large' color='white'>Konfigurovať sieťové rozhranie</span>"
+msgstr ""
+"<span size='large' color='white'>Konfigurovať sieťové rozhranie</span>"
 
 #: ../ui/createinterface.ui.h:21
 msgid "Select the interface type you would like to configure."
@@ -7041,11 +7023,9 @@ msgid "CPU _default:"
 msgstr "Pre_dvoľby procesora:"
 
 #: ../ui/preferences.ui.h:21
-msgid ""
-"Add Spice _USB\n"
+msgid "Add Spice _USB\n"
 "Redirection:"
-msgstr ""
-"Pridať presmerovanie\n"
+msgstr "Pridať presmerovanie\n"
 "_USB cez Spice:"
 
 #: ../ui/preferences.ui.h:23
